p2/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1 # Selects the correct labelName of the Pod
  ports:
    - name: http
      port: 80 # Port that the Service Listens to
      targetPort: 8080 # Port that the Service will redirect to, it should match the "containerPort" of the Pod
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
