p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik # optionnal, defines an Ingress Controller.Here traefik by default (built in k3s)
  rules:
  - host: app1.com # Upon http request recieved, routes the traffic to the correct service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service # name of the service that ingress will focus on 
            port:
              number: 80 # default http port that the ingress listens to

  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80

  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
